# edgs_splat_init

./: .gitmodules  README.md  __init__.py  corr_init.py  main.py  pyproject.toml  utils.py
src/edgs_splat_init/: __init__.py  main.py  utils.py
