[project]
name = "edgs_splat_init"
version = "0.1.0"
description = "Implementnts dense splat initialization from EDGS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jaxtyping>=0.3.2",
    "romatch",
]

[tool.uv.sources]
romatch = { path = "RoMa" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

